Fix AsyncUDP repository

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,14 +14,16 @@ board = esp32-c3-devkitm-1
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
+lib_compat_mode = strict
+build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
 
 lib_deps =
-    adafruit/Adafruit NeoPixel @ ^1.15.1
-    paulstoffregen/Time @ ^1.6.1
-    arduino-libraries/NTPClient @ ^3.2.1
-    mathertel/OneButton @ ^2.6.1
-    sstaub/Ticker @ ^4.4.0
+    adafruit/Adafruit NeoPixel
+    paulstoffregen/Time
+    arduino-libraries/NTPClient
+    mathertel/OneButton
+    sstaub/Ticker
     WiFiManager
     ElegantOTA
-    me-no-dev/AsyncTCP@^3.3.2
-    me-no-dev/ESPAsyncWebServer@^3.6.0
+    https://github.com/ESP32Async/AsyncTCP
+    me-no-dev/ESPAsyncWebServer
