--- a/platformio.ini
+++ b/platformio.ini
@@ -12,18 +12,19 @@
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
-upload_speed = 115200
 monitor_speed = 115200
-lib_compat_mode = strict
-build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
+upload_speed = 921600
+board_build.filesystem = littlefs
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
 
 lib_deps =
-    adafruit/Adafruit NeoPixel
-    paulstoffregen/Time
-    arduino-libraries/NTPClient
     mathertel/OneButton
     sstaub/Ticker
-    WiFiManager
-    ElegantOTA
     https://github.com/ESP32Async/AsyncTCP
     me-no-dev/ESPAsyncWebServer
+    martinverges/ESP32 Wifi Manager
+    adafruit/Adafruit NeoPixel
+    arduino-libraries/NTPClient
+    ArduinoJson
